Add older python versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,15 @@ matrix:
       env: ENV=pytest
     - python: "3.6.7"
       env: ENV=pytest
-    - python: "3.7"
+    - python: "3.5"
+      env: ENV=pytest
+    - python: "3.4"
+      env: ENV=pytest
+    - python: "3.2"
+      env: ENV=pytest
+    - python: "3.2"
+      env: ENV=pytest
+    - python: "2.7"
       env: ENV=pytest
 
     - name: lint
