--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,11 +88,11 @@ docs = [
 ]
 dev = [
     "dlint",
-    "flake8-alfred",
-    "flake8-annotations-complexity",
+    "flake8-alfred; python_version>='3.4'",
+    "flake8-annotations-complexity; python_version>='3.4'",
     "flake8-bandit",
-    "flake8-broken-line",
-    "flake8-bugbear",
+    "flake8-broken-line; python_version>='3.4'",
+    "flake8-bugbear; python_version>='3.4'",
     "flake8-builtins",
     "flake8-coding",
     "flake8-commas",
@@ -100,20 +100,20 @@ dev = [
     "flake8-debugger",
     "flake8-django",
     "flake8-docstrings",
-    "flake8-eradicate",
-    "flake8-executable",
+    "flake8-eradicate; python_version>='3.4'",
+    "flake8-executable; python_version>='3.4'",
     "flake8-isort",
     "flake8-logging-format",
     "flake8-mutable",
     "flake8-pep3101",
-    "flake8-pie",
+    "flake8-pie; python_version>='3.4'",
     "flake8-print",
     "flake8-quotes",
     "flake8-rst-docstrings",
     "flake8-scrapy",
     "flake8-strict",
     "flake8-string-format",
-    "flake8-variables-names",
+    "flake8-variables-names; python_version>='3.4'",
     "mccabe",
     "pep8-naming",
     "pylint",
