--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,10 @@ before_install:
   - sudo apt-get install -y tree
   - env
   - tree
+  - ls /opt/python
   # install DepHell
   # https://github.com/travis-ci/travis-ci/issues/8589
-  - curl -L dephell.org/install | /opt/python/3.7/bin/python
+  - curl -L dephell.org/install | /opt/python/$TRAVIS_PYTHON_VERSION/bin/python
   - dephell inspect self
 install:
   - dephell venv create --env=$ENV --python="/opt/python/$TRAVIS_PYTHON_VERSION/bin/python"
