--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,114 +10,90 @@ flake8-commas = ["+*"]
 flake8-quotes = ["+*"]
 pylint = ["+F*", "+E*", "-E0611", "-E1101", "-E0401"]
 
-# -- DEPHELL -- #
-
-[tool.dephell.main]
-from = {format = "flit", path = "pyproject.toml"}
-to = {format = "setuppy", path = "setup.py"}
-envs = ["main", "dev"]
-command = "python -m flakehell lint"
-
-[tool.dephell.pytest]
-from = {format = "flit", path = "pyproject.toml"}
-envs = ["main", "dev"]
-tests = ["tests"]
-command = "python -m pytest tests/"
-
-[tool.dephell.docs]
-from = {format = "flit", path = "pyproject.toml"}
-envs = ["docs"]
-command = "sphinx-build -W docs docs/build"
-
-# -- FLIT -- #
-
-[tool.flit.metadata]
-module="flakehell"
-author="Gram (@orsinium)"
-author-email="master_fess@mail.ru"
-home-page="https://gitlab.com/life4/flakehell"
-requires-python=">>=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*"
-requires=[
-    "entrypoints",
-    "flake8>=3.7.5",
-    "pygments",
-    "pylint",
-    "termcolor",
-    "toml",
-    "urllib3",
-]
-description-file="README.md"
-classifiers=[
+[tool.poetry]
+name = "flakehell"
+version = "0.3.0"
+description = "Flake8 wrapper to make it nice and configurable"
+classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Environment :: Console",
     "Framework :: Flake8",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 2.7",
+    "Programming Language :: Python :: 3.4",
     "Programming Language :: Python :: 3.5",
     "Programming Language :: Python :: 3.6",
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 2",
     "Programming Language :: Python",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Software Development :: Quality Assurance",
 ]
+homepage = "https://gitlab.com/life4/flakehell"
+authors = ["Gram (@orsinium) <master_fess@mail.ru>"]
+readme = "README.md"
 
-[tool.flit.metadata.urls]
-Documentation = "https://flakehell.readthedocs.io/"
-
-[tool.flit.scripts]
+[tool.poetry.scripts]
 flakehell = "flakehell:entrypoint"
 flake8helled = "flakehell:flake8_entrypoint"
 
-[tool.flit.entrypoints."flake8.extension"]
+[tool.poetry.plugins."flake8.extension"]
 pylint = "flakehell.plugins:PyLintChecker"
 
-[tool.flit.entrypoints."flake8.report"]
+[tool.poetry.plugins."flake8.report"]
 baseline = "flakehell.formatters:BaseLineFormatter"
 colored = "flakehell.formatters:ColoredFormatter"
 grouped = "flakehell.formatters:GroupedFormatter"
 json = "flakehell.formatters:JSONFormatter"
 stat = "flakehell.formatters:StatFormatter"
 
-[tool.flit.metadata.requires-extra]
-docs = [
-    "alabaster",
-    "pygments-github-lexers",
-    "recommonmark",
-    "sphinx",
-]
-dev = [
-    "dlint",
-    "flake8-alfred; python_version>='3.6'",
-    "flake8-annotations-complexity; python_version>='3.6'",
-    "flake8-bandit",
-    "flake8-broken-line; python_version>='3.6'",
-    "flake8-bugbear; python_version>='3.6'",
-    "flake8-builtins",
-    "flake8-coding",
-    "flake8-commas",
-    "flake8-comprehensions",
-    "flake8-debugger",
-    "flake8-django",
-    "flake8-docstrings",
-    "flake8-eradicate; python_version>='3.6'",
-    "flake8-executable; python_version>='3.6'",
-    "flake8-isort",
-    "flake8-logging-format",
-    "flake8-mutable",
-    "flake8-pep3101",
-    "flake8-pie; python_version>='3.6'",
-    "flake8-print",
-    "flake8-quotes",
-    "flake8-rst-docstrings",
-    "flake8-scrapy",
-    "flake8-strict",
-    "flake8-string-format",
-    "flake8-variables-names; python_version>='3.6'",
-    "mccabe",
-    "pep8-naming",
-    "pylint",
-    "wemake-python-styleguide; python_version>='3.6'",
+[tool.poetry.dependencies]
+python = "~2.7 || ^3.4"
+entrypoints = "*"
+flake8 = ">=3.7.5"
+pygments = "*"
+pylint = "*"
+termcolor = "*"
+toml = "*"
+urllib3 = "*"
+pathlib2 = {python = "<3.6", version="*"}
 
-    "pytest",
-]
+[tool.poetry.dev-dependencies]
+dlint = "*"
+flake8-alfred = {python = "^3.6", version = "*"}
+flake8-annotations-complexity = {python = "^3.6", version = "*"}
+flake8-bandit = "*"
+flake8-broken-line = {python = "^3.6", version = "*"}
+flake8-bugbear = {python = "^3.6", version = "*"}
+flake8-builtins = "*"
+flake8-coding = "*"
+flake8-commas = "*"
+flake8-comprehensions = "*"
+flake8-debugger = "*"
+flake8-django = "*"
+flake8-docstrings = "*"
+flake8-eradicate = {python = "^3.6", version = "*"}
+flake8-executable = {python = "^3.6", version = "*"}
+flake8-isort = "*"
+flake8-logging-format = "*"
+flake8-mutable = "*"
+flake8-pep3101 = "*"
+flake8-pie = {python = "^3.6", version = "*"}
+flake8-print = "*"
+flake8-quotes = "*"
+flake8-rst-docstrings = "*"
+flake8-scrapy = {python = "^3.6", version = "*"}
+flake8-strict = "*"
+flake8-string-format = "*"
+flake8-variables-names = {python = "^3.6", version = "*"}
+pydocstyle = {python = "~2.7", version = "<4.0.0"}
+mccabe = "*"
+pep8-naming = "*"
+pytest = "*"
+wemake-python-styleguide = {python = "^3.6", version = "*"}
+
+[tool.poetry.extras]
+docs = ["alabaster", "pygments-github-lexers", "recommonmark", "sphinx"]
+
