--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   - env
   - tree
   - ls /opt/python
-  - "/opt/python/$TRAVIS_PYTHON_VERSION/bin/python" install poetry
+  - pip install poetry
 install:
   - poetry install
 
@@ -47,8 +47,6 @@ matrix:
         - bash -c "markdownlint --config markdownlint.json **/*.md"
 
     - python: "3.7"
-      script:
-        - sphinx-build -W docs docs/build
       install:
         - poetry install -E docs
       script:
