--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ before_install:
   - env
   - tree
   - ls /opt/python
-  - pip install poetry
 install:
+  - pip install poetry
   - poetry install
 
 matrix:
@@ -30,6 +30,7 @@ matrix:
     - python: "3.4"
       install:
         - pip install 'poetry<0.12.17'
+        - poetry install
       script:
         - poetry run pytest tests/
     - python: "2.7.15"
