--- a/.travis.yml
+++ b/.travis.yml
@@ -36,8 +36,16 @@ matrix:
     - python: "2.7.15"
       script:
         - poetry run pytest tests/
-    - name: lint
+    - name: lint-3.7
       python: "3.7"
+      script:
+        - poetry run flakehell lint
+    - name: lint-3.4
+      python: "3.4"
+      script:
+        - poetry run flakehell lint
+    - name: lint-2.7
+      python: "2.7"
       script:
         - poetry run flakehell lint
 
@@ -51,6 +59,7 @@ matrix:
 
     - python: "3.7"
       install:
+        - pip install poetry
         - poetry install -E docs
       script:
         - poetry run pytest tests/
