--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,9 @@ matrix:
         - poetry run flakehell lint
     - name: lint-3.4
       python: "3.4"
+      install:
+        - pip install 'poetry<0.12.17'
+        - poetry install
       script:
         - poetry run flakehell lint
     - name: lint-2.7
