--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pylint = ["+F*", "+E*", "-E0611", "-E1101", "-E0401"]
 name = "flakehell-py27"
 version = "0.3.0"
 description = "Flake8 wrapper to make it nice and configurable"
+packages = [{include= "flakehell"}]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Environment :: Console",
